# vibesearch

./: Cargo.toml  LICENSE  README.md
examples/: test_config.rs
src/: batch.rs  client.rs  config.rs  error.rs  lib.rs  protocol.rs  vibe.rs
