[package]
name = "vibesearch"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "vibesearch is a AI-powered modern iterator searching library written in Rust."
homepage = "https://github.com/metwse/vibesearch"
repository = "https://github.com/metwse/vibesearch"
keywords = ["iterator", "search", "algorithm"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
serde = ["dep:serde", "dep:bincode", "dep:base64"]
sha256 = ["dep:ring", "dep:base64"]

[dependencies]
openai_dive = "1.2"
serde_json = "1"
paste = "1"
rand = { version = "0.9", features = ["os_rng"] }
ring = { version = "0.17", optional = true }
base64 = { version = "0.22", optional = true }
serde = { version = "1", optional = true }
bincode = { version = "2", features = ["serde"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
